# zeus-apple-silicon

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: fmt_lint_test.yaml  publish_pypi.yaml
apple_energy/: apple_energy.hpp
bindings/: CMakeLists.txt  energy_bindings.hpp  zeus_ext.cpp
bindings/zeus_apple_silicon/: __init__.py
examples/: CMakeLists.txt  one_interval.cpp
examples/cpp/: CMakeLists.txt  dump_channels.cpp  one_interval.cpp  overlapping.cpp  print_metrics.hpp
examples/python/: check_compatibility.py  llama.py  simple.py
include/zeus_apple_silicon/: energy.hpp
scripts/: fmt_lint_cpp.sh  fmt_lint_py.sh  recurse_directories.py  run_tests.sh  test_cpp.sh
tests/: CMakeLists.txt
tests/cpp/: CMakeLists.txt  test_basic.cpp
tests/mocker/: CMakeLists.txt  ioreport_mocker.cpp  ioreport_mocker.hpp  mock_ioreport.cpp  mocked_zeus_ext.cpp  mocker_ext.cpp
tests/python/: test_basic.py  test_monitor.py
tests/tests_cpp/: CMakeLists.txt  test_monitor.cpp
tests/tests_python/: test_monitor.py
zeus_apple_silicon/cpp/: energy_bindings.hpp
